# aic-policy

./: AGENT_SETUP.md  AGENT_TRAIN.md  CLAUDE.md  pixi.toml
aic_data_collector/: package.xml  pixi.toml  setup.py
aic_data_collector/aic_data_collector/ros/: DataCollectorPolicy.py
aic_data_collector/scripts/: inspect_dataset.py
docs/: implementation_plan.md
docs/dev_docs/: claude-intrinsic-report.md
docs/plans/: 2026-04-13-il-training-design.md  2026-04-13-il-training-plan.md
training/: benchmark_throughput.py  dataset.py  evaluate.py  test_act.py  test_cfm.py  test_dataset.py  test_encoders.py  train_act.py  train_cfm.py
training/configs/: act.yaml  cfm.yaml
training/models/: act.py  cfm.py  encoders.py
